Fix Align

--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@
 .lets-talk-section-main-container {
     border: blue 3px dashed; 
     background-image: url("images/background.webp");
+    background-color:#5171a5;
     height:300px; 
     display:flex; 
     flex-direction:row; 
@@ -204,7 +205,7 @@
     gap:32px; 
     padding-top:64px; 
     padding-bottom:64px; 
-    background-color:#5171a5;
+   
 }
 
 
@@ -279,4 +280,48 @@
      border: turquoise 3px dashed;
      font-family: "Montserrat"; 
      font-size:16px; 
+ }
+
+ .services-main-container {
+     border:red 2px solid;
+     height:250px;  
+     width:60%;
+     margin-left:330px; 
+     margin-top:64px; 
+     font-family:'Montserrat';
+     font-size: 45px; 
+     display:flex; 
+     flex-direction:column; 
+     align-items:center;
+     padding-bottom:32px; 
+ }
+
+ .services-main-container-header-container{
+     border:yellow 2px solid;      
+ }
+ .three-images-container {
+     border: green 2px solid; 
+     height:150px; 
+     width:900px;
+     display:flex; 
+     justify-content: center; 
+     gap:16px; 
+     margin-top:32px; 
+    
+ 
+ }
+
+ .lady-and-bridge-image {
+     border: purple 2px solid; 
+     height:150px; 
+ }
+
+ .computer-image {
+     border: purple 2px solid; 
+     height: 150px; 
+ }
+
+ .notebooks-image {
+     border: purple 2px solid; 
+     height:150px; 
  }
